--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body {
   padding: 1rem;
   background-color: rgba(0, 0, 0, 0.4);
   margin: 0.7rem 0;
+  border-radius: 5px;
   display: grid;
   grid-template-rows: 3fr, 1fr;
   grid-gap: 10px;
@@ -84,10 +85,7 @@ body {
 .card:hover {
   transition: 0.2s;
   transform: scale(1.1);
-  background-color: #fff;
-}
-.card .card-title:hover {
-  color: black;
+  /* background-color: rgba(255, 255, 255, 0.2); */
 }
 .cardSelect img {
   max-width: 200px;
