--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
 
 body {
   background-image: url("./assets/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: bottom;
 }
 
 .container {
@@ -25,6 +29,12 @@ body {
 
 .container-main {
   min-height: 100vh;
+}
+
+.playContainer {
+  display: grid;
+  grid-template-columns: 1fr, 1fr, 3fr;
+  grid-template-areas: "Player . op op op";
 }
 
 .btn {
@@ -59,9 +69,11 @@ body {
   background: var(--primary-color);
   color: #fff;
 }
+
 .btn:hover {
   opacity: 0.8;
 }
+
 .cardContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -70,6 +82,7 @@ body {
   margin: auto;
   margin-top: 30px;
 }
+
 .card {
   padding: 1rem;
   background-color: rgba(0, 0, 0, 0.4);
@@ -82,20 +95,47 @@ body {
     "icon"
     "description";
 }
+
+.cardSelect {
+  width: fit-content;
+}
+
+.cardPlayPage {
+  grid-area: Player;
+}
+
+.cardOpponent {
+  grid-area: op;
+}
+
 .card:hover {
   transition: 0.2s;
   transform: scale(1.1);
-  /* background-color: rgba(255, 255, 255, 0.2); */
 }
+
 .cardSelect img {
   max-width: 200px;
   object-fit: contain;
 }
+
 .card-title {
   font-size: 1.2rem;
 }
 .cardText {
   color: #fff;
   background-color: rgba(255, 255, 255, 0.2);
-  padding: 5px;
+  padding: 10px;
+  width: 100%;
+}
+
+#playerTitle {
+  display: block;
+  margin: 5px;
+  font-size: 1.5rem;
+}
+
+.points {
+  float: right;
+  margin-right: 1rem;
+  font-size: 1.2rem;
 }
