--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 .playContainer {
   display: grid;
-  grid-template-columns: 1fr, 1fr, 3fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-template-areas: "Player . op op op";
 }
 
@@ -86,7 +86,7 @@ body {
 .card {
   padding: 1rem;
   background-color: rgba(0, 0, 0, 0.4);
-  margin: 0.7rem 0;
+  margin: 2rem;
   border-radius: 5px;
   display: grid;
   grid-template-rows: 3fr, 1fr;
@@ -104,10 +104,6 @@ body {
   grid-area: Player;
 }
 
-.cardOpponent {
-  grid-area: op;
-}
-
 .card:hover {
   transition: 0.2s;
   transform: scale(1.1);
@@ -121,6 +117,7 @@ body {
 .card-title {
   font-size: 1.2rem;
 }
+
 .cardText {
   color: #fff;
   background-color: rgba(255, 255, 255, 0.2);
@@ -138,4 +135,29 @@ body {
   float: right;
   margin-right: 1rem;
   font-size: 1.2rem;
+}
+
+#opponentTitle0,
+#opponentTitle1,
+#opponentTitle2 {
+  display: block;
+  margin: 5px;
+  font-size: 1.5rem;
+}
+
+.cardOpponent {
+  transform: scale(0.9);
+}
+
+.cardOpponent:hover {
+  transition: 0.2s;
+  transform: scale(1);
+}
+
+.cardBattle {
+  transform: scale(1.2)
+}
+
+.hide {
+  display: none;
 }
